Role class fixed
